...
                                        <rect key="frame" x="0.0" y="555" width="343" height="52"/>
                                        <color key="backgroundColor" red="0.0" green="0.4793452024" blue="0.99908632040000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="52" id="d1B-Am-NDA"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Done">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="15"/>
                                            </userDefinedRuntimeAttribute>
...
                            <constraint firstItem="tfa-TI-ddc" firstAttribute="top" secondItem="9ak-S4-pEE" secondAttribute="bottom" id="fVu-be-WlV"/>
                            <constraint firstAttribute="trailing" secondItem="Fvi-QT-8GK" secondAttribute="trailing" id="mlM-di-Ki6"/>
                            <constraint firstItem="Fvi-QT-8GK" firstAttribute="leading" secondItem="Vf7-84-87Z" secondAttribute="leading" id="n1O-US-mwL"/>
                            <constraint firstItem="DDB-kN-zaU" firstAttribute="leading" secondItem="Vf7-84-87Z" secondAttribute="leading" id="oNx-Gc-aMO"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Favourites" largeTitleDisplayMode="never" id="bBl-hm-ZeC"/>
                    <connections>
                        <outlet property="collectionView" destination="DDB-kN-zaU" id="Kqa-Th-Z2o"/>
                        <outlet property="deleteAllButton" destination="inQ-Z3-gX2" id="XpD-Im-P42"/>
                        <outlet property="deleteAllButtonView" destination="9ak-S4-pEE" id="fhh-CQ-PZw"/>
                        <outlet property="deleteViewConstraint" destination="fVu-be-WlV" id="mRr-fn-R2o"/>
                        <outlet property="segment" destination="q1u-Mf-1Xx" id="lhA-AG-pnF"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Jip-VF-Y3D">
                                                        <rect key="frame" x="12" y="110.5" width="327" height="23"/>
                                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="19"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ADDRESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lps-VB-nvD">
                                                        <rect key="frame" x="12" y="141.5" width="327" height="18"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading Address..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRa-nQ-N
...
