...
    func getReviews() {
        
        guard let restaurant = restaurant else { return }
        
        let headers: HTTPHeaders = ["Authorization": "Bearer Y43yqZUkj6vah5sgOHU-1PFN2qpapJsSwXZYScYTo0-nK9w5Y3lDvrdRJeG1IpQAADep0GrRL5ZDv6ybln03nIVzP7BL_IzAf_s7Wj5_QLPOO6oXns-nJe3-kIPiWHYx"]
        
        Alamofire.request("https://api.yelp.com/v3/businesses/\(restaurant.id)/reviews", headers: headers).responseJSON { (Response) in
            
            if let value = Response.result.value {
                
                let json = JSON(value)
                
                for review in json["reviews"].arrayValue {
...
        
    }
    
    func restaurantInFavourites() -> Bool {
        
        guard let restaurant = restaurant else { return false }
        guard let decodedArr = defaults.object(forKey: "favourites") as? Data else { return false }
        guard let decodedRestaurants = NSKeyedUnarchiver.unarchiveObject(with: decodedArr) as? [Restaurant] else { return false }
        
        if decodedRestaurants.contains(where: { $0.id == restaurant.id }) {
            
            return true
            
...
